<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"        
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/login_layout_bg" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >
            
            <!-- <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/copyright" /> -->
            
            <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="@dimen/login_txt_margin_left"
	            android:text="@string/app_name"
	            android:textColor="@color/login_app_text"
	            android:textSize="@dimen/login_txt_textsize" />
            
        </LinearLayout>

        <Button
            android:id="@+id/main_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style_green"
            android:gravity="center"
            android:paddingLeft="@dimen/login_btn_padding"
            android:paddingRight="@dimen/login_btn_padding"
            android:layout_marginTop="@dimen/login_btn_margin_top"
            android:text="@string/login"
            android:textColor="@color/login_btn_text"
            android:textSize="@dimen/login_btn_textsize"
            android:onClick="start_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/login_txt_padding"
            android:text="@string/login_tips"
            android:textSize="@dimen/login_txt_textsize2"
            android:textColor="@color/login_txt_text" />

        <Button
            android:id="@+id/main_regist_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_btn_margin_top"
            android:background="@drawable/btn_style_white"
            android:gravity="center"
            android:paddingLeft="@dimen/login_btn_padding"
            android:paddingRight="@dimen/login_btn_padding"
            android:text="@string/register"
            android:textColor="@color/login_btn_text"
            android:textSize="@dimen/login_btn_textsize"
            android:onClick="start_register"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/login_txt_padding"
            android:gravity="center"
            android:text="@string/register_tips"
            android:textSize="@dimen/login_txt_textsize2"
            android:textColor="@color/login_txt_text"  />
    </LinearLayout>
