<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000" >

    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/friend_preview_menu_bg" >

        <Button
            android:id="@+id/ResetImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:background="@drawable/shape_btn_login_back"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/friend_preview_reset"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <Button
            android:id="@+id/SubmitImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:background="@drawable/shape_btn_login_back"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/friend_preview_use"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@id/SubmitImageBtn"
            android:layout_toRightOf="@id/ResetImageBtn"
            android:gravity="center"
            android:text="@string/friend_preview_title"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:textStyle="bold" />
    </RelativeLayout>

</FrameLayout>