<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/chatting_bg_purecolor_thumb" >
    
    <RelativeLayout 
        android:id="@+id/rl_layout"
		android:layout_width="fill_parent"
		android:layout_height="45dp"
		android:background="@drawable/title_bar"
		android:gravity="center_vertical"> 
  		<Button
            android:id="@+id/btn_back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/return_back"
            android:textSize="14sp"
            android:textColor="#fff"
            android:background="@drawable/title_btn_back" />    
  		<TextView android:id="@+id/txtChatTitle"
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content" 
    		android:text=""
    		android:layout_centerInParent="true"
    		android:textSize="20sp"		
			android:textColor="#ffffff" /> 
		<ImageButton android:id="@+id/right_btn"
		    android:layout_width="67dp" 
    		android:layout_height="wrap_content"
    		android:layout_alignParentRight="true" 
    		android:layout_centerVertical="true"
    		android:layout_marginRight="5dp"
    		android:src="@drawable/mm_title_btn_contact_normal"
			android:background="@drawable/title_btn_right" />      
	</RelativeLayout>
    
	  
   <!-- <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottombar_bg" >
        <Button
	        android:id="@+id/btn_send"
	        android:layout_width="60dp"
	        android:layout_height="40dp"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="10dp"
	        android:layout_centerVertical="true"
	        android:text="发送"
	        android:background="@drawable/chat_send_btn" />
        <EditText
	        android:id="@+id/et_sendmessage"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_toLeftOf="@id/btn_send"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:background="@drawable/login_edit_normal"
	        android:layout_centerVertical="true"
	        android:singleLine="true"
	        android:textSize="18sp"/>
    </RelativeLayout> -->
    
    <RelativeLayout
        android:id="@+id/chat_layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_layout" >
        
	    <LinearLayout android:id="@+id/BottomFunctionMenu"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:orientation="vertical" >
	
	        <RelativeLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:background="@drawable/bottombar_bg">
	
	            <LinearLayout
	                android:id="@+id/ChatMsgAudioView"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentLeft="true"
	                android:layout_centerVertical="true"
	                android:orientation="horizontal" >
	
	                <FrameLayout
	                    android:layout_width="wrap_content"
	                    android:layout_height="fill_parent"
	                    android:layout_marginLeft="10dp"
	                    android:layout_marginRight="5dp" >
	
	                    <ImageView
	                        android:id="@+id/chat_img_more"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:layout_gravity="center"
	                        android:src="@drawable/type_select_btn" />
	                </FrameLayout>
	
	                <FrameLayout
	                    android:layout_width="wrap_content"
	                    android:layout_height="fill_parent"
	                    android:layout_marginLeft="5dp"
	                    android:layout_marginRight="10dp"
	                    android:visibility="visible" >
	
	                    <ImageView
	                        android:id="@+id/chat_img_audit"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:layout_gravity="center"
	                        android:background="@null"
	                    	android:src="@drawable/chatting_setmode_voice_btn" />
	
	                    <ImageView
	                        android:id="@+id/chat_img_keyboard"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:layout_gravity="center"
	                        android:background="@drawable/chatting_setmode_keyboard_btn"
	                        android:visibility="invisible" />
	                </FrameLayout>
	            </LinearLayout>
	
	            <FrameLayout
	                android:id="@+id/ChatRightView"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:layout_toRightOf="@id/ChatMsgAudioView" >
	
	                <LinearLayout android:id="@+id/ChatTextLayout"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:orientation="horizontal" >
	
	                    <FrameLayout android:id="@+id/ChatMsgEditTextView"
	                        android:layout_width="fill_parent"
	                        android:layout_height="wrap_content"
	                        android:layout_gravity="center_vertical"
	                        android:layout_weight="1" >
	
	                        <com.xbd.kuk.ui.KUKEditText
	                            android:id="@+id/chat_edit_msg"
	                            android:layout_width="fill_parent"
	                            android:layout_height="wrap_content"
	                            android:layout_gravity="center_vertical"
	                            android:maxHeight="80dp"
	                            android:maxLines="3"
	                            android:minHeight="60dp"
	                            android:textColor="@color/black" />
	                    </FrameLayout>
	
	                    <FrameLayout
	                        android:id="@+id/sendChatMsgBtnView"
	                        android:layout_width="fill_parent"
	                        android:layout_height="match_parent"
	                        android:layout_gravity="center_vertical"
	                        android:layout_marginRight="5dp"
	                        android:layout_weight="4"
	                        android:paddingBottom="5dp"
	                        android:paddingLeft="5dp"
	                        android:paddingTop="5dp" >
	
	                        <Button
	                            android:id="@+id/chat_btn_msg_send"
	                            android:layout_width="wrap_content"
	                            android:layout_height="match_parent"
	                            android:layout_gravity="center_vertical"
	                            android:background="@drawable/chat_send_btn"
	                            android:paddingLeft="5dp"
	                            android:paddingRight="5dp"
	                            android:text="@string/send"
	                            android:textSize="16dp" />
	                    </FrameLayout>
	                </LinearLayout>
	
	                <FrameLayout
	                    android:id="@+id/ChatAudioLayout"
	                    android:layout_width="fill_parent"
	                    android:layout_height="fill_parent"
	                    android:visibility="gone" >
	
	                    <Button
	                        android:id="@+id/chat_btn_audio_send"
	                        android:layout_width="fill_parent"
	                        android:layout_height="wrap_content"
	                        android:layout_gravity="center"
	                        android:background="@drawable/img_btn_exit_pressed"
	                        android:text="@string/press_say"
	                        android:textColor="@color/white"
	                        android:textStyle="bold" >
	                    </Button>
	                </FrameLayout>
	            </FrameLayout>
	        </RelativeLayout>
	
	        <FrameLayout
	            android:id="@+id/faceListLayout"
	            android:layout_width="fill_parent"
	            android:layout_height="210dp"
	            android:visibility="gone" >
	
	            <View
	                android:layout_width="fill_parent"
	                android:layout_height="1dp"
	                android:background="#b0b0b0" />
	
	            <com.xbd.kuk.ui.KUKFaceView
	                android:id="@+id/faceGridView"
	                android:layout_width="fill_parent"
	                android:layout_height="fill_parent"
	                android:layout_marginTop="1dp"
	                android:visibility="visible" >
	            </com.xbd.kuk.ui.KUKFaceView>
	        </FrameLayout>
	    </LinearLayout>
	    
	    <!-- <ListView
		    android:id="@+id/chatMsgListView"
		    android:layout_below="@id/rl_layout"
		    android:layout_above="@id/rl_bottom"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"    
			android:divider="@null"
		    android:dividerHeight="5dp"
		    android:stackFromBottom="true"
		    android:scrollbarStyle="outsideOverlay" 
		    android:cacheColorHint="#0000"/> -->
	    <FrameLayout
	        android:id="@+id/msgListLayout"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_above="@id/BottomFunctionMenu"
	        android:layout_alignParentTop="true" >
	
	        <ListView
	            android:id="@+id/chatMsgListView"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:divider="@null"
			    android:dividerHeight="5dp"
			    android:stackFromBottom="true"
			    android:scrollbarStyle="outsideOverlay" 
			    android:cacheColorHint="#0000" >
	        </ListView>
	    </FrameLayout>
	        
		<FrameLayout
	        android:id="@+id/chatMoreLayout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_above="@id/BottomFunctionMenu"
	        android:layout_marginBottom="10dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:visibility="gone" >
	
	        <FrameLayout
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:background="@drawable/img_privateletter_more_bg" >
	        </FrameLayout>
	
	        <LinearLayout
	            android:id="@+id/chatMoreLayout"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:layout_gravity="center_vertical"
	            android:gravity="center_vertical" >
	
	            <FrameLayout
	                android:layout_width="0dp"
	                android:layout_height="fill_parent"
	                android:layout_weight="1" >
	
	                <ImageView
	                    android:id="@+id/chat_img_face"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center"
	                    android:background="@drawable/img_privateletter_face_icon" />
	            </FrameLayout>
	
	            <FrameLayout
	                android:layout_width="0dp"
	                android:layout_height="fill_parent"
	                android:layout_gravity="center"
	                android:layout_weight="1" >
	
	                <ImageView
	                    android:id="@+id/chat_img_camera"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center"
	                    android:background="@drawable/img_privateletter_camera_icon" />
	            </FrameLayout>
	
	            <FrameLayout
	                android:layout_width="0dp"
	                android:layout_height="fill_parent"
	                android:layout_gravity="center"
	                android:layout_weight="1" >
	
	                <ImageView
	                    android:id="@+id/chat_img_album"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center"
	                    android:background="@drawable/img_privateletter_album_icon" />
	            </FrameLayout>
	        </LinearLayout>
	    </FrameLayout>
    </RelativeLayout>
    
	<include
        android:id="@+id/ImagePreviewMainLayout"
        layout="@layout/friend_img_preview_layout"
        android:visibility="gone" />
    
	<FrameLayout
        android:id="@+id/AudioRecorderView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#DDCCDD"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/img_friend_mic" />

            <TextView
                android:id="@+id/soundRateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="0" />
        </LinearLayout>
    </FrameLayout>
    
</RelativeLayout>
